<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.forhackupc2016.mat.android_trippa.SetYourDefaultsActivity">

    <TextView
        android:paddingTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDefaultsScreenIntroText"
        android:textSize="30sp"
        android:textColor="@color/lightBlue"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDefaultsScreenItem1"
        android:id="@+id/radioButton"
        android:textSize="30sp"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDefaultsScreenItem2"
        android:id="@+id/radioButton2"
        android:textSize="30sp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/radioButton"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDefaultsScreenItem3"
        android:id="@+id/radioButton3"
        android:textSize="30sp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/radioButton2"
        android:layout_alignLeft="@+id/radioButton2"
        android:layout_alignStart="@+id/radioButton2" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDefaultsScreenItem4"
        android:id="@+id/radioButton4"
        android:textSize="20sp"
        android:layout_below="@+id/radioButton3"
        android:layout_alignLeft="@+id/radioButton3"
        android:layout_alignStart="@+id/radioButton3"
        android:layout_marginTop="74dp" />

</RelativeLayout>
