<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.forhackupc2016.mat.android_trippa.MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/firstScreenPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editTextUsername"
        android:layout_alignStart="@+id/editTextUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/firstScreenUsername"
        android:ems="10"
        android:id="@+id/editTextUsername"
        android:layout_above="@+id/editTextPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/firstScreenBTNlogin"
        android:id="@+id/buttonLogin"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true" />

</RelativeLayout>