<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.forhackupc2016.mat.android_trippa.SelectFavoritsActivity">
    <TextView
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDefaultsScreenIntroText"
        android:textSize="30sp"
        android:textColor="@color/lightBlue"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:drawable/btn_default"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="0dp"
        android:layout_marginTop="75dp">

        <ImageView
            android:id="@+id/img5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:background="@drawable/item003" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/setDefaultsScreenItem1"
            android:background="@color/lightBlue30"
            android:textSize="15sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:drawable/btn_default"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="0dp"
        android:layout_marginTop="240dp">

        <ImageView
            android:id="@+id/img6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:background="@drawable/item002" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/setDefaultsScreenItem3"
            android:background="@color/lightBlue30"
            android:textSize="15sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:drawable/btn_default"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="0dp"
        android:layout_marginTop="405dp">

        <ImageView
            android:id="@+id/img7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:background="@drawable/item001" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/setDefaultsScreenItem2"
            android:background="@color/lightBlue30"
            android:textSize="15sp" />
    </RelativeLayout>
</RelativeLayout>
